internal/buf/cmd/buf/testdata/workspace/success/symlink/buf.work
version: v1beta1
directories:
  - a
  - b
  - c
