internal/buf/cmd/buf/testdata/workspace/fail/symlink/buf.work
version: v1
directories:
  - a
  - b
